# PARROT-testbed

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
data/: enabled_datasets.txt
indices/: benchmark_alex.h  benchmark_deli.h  benchmark_dili.h  benchmark_lipp.h  benchmark_parrot.h  benchmark_pgm.h  benchmark_pgm_dynamic.h  benchmark_pgm_static.h  benchmark_rmi.h  benchmark_rs.h  benchmark_sea21.h  benchmark_swix.h  benchmark_tlx.h
indices/ALEX/: alex.h  alex_nodes.h
indices/SWIX/src/: SWseg.hpp  Swix.hpp
plotter/: Makefile  ablation.tex  best_variants.py  build.sh  existing_figure.tex  figure_template.tex  multiplot_template.tex  paper_plots.tex  paper_plots_big.tex  plot.py  plot_cdf.py  plot_sql.py  summary_figure.tex
plotter_sql/: build.sh  get_last_data.sh  performance_plot.tex
scripts/: download_datasets.sh  fb_clean.py  generate_rmi_models.sh  generate_synthetic_data.sh  run_benchmarks.sh  shuffle_dataset.py
src/: benchmark.h  generate_datasets.cpp  lcp_stats.cpp  main.cpp  utils.h  workload.h  zipf.h
